# zmk-config-19RotaryPad

./: CMakeLists.txt  build.yaml
config/boards/shields/19RotaryPad/: 19RotaryPad.conf  19RotaryPad.keymap  19RotaryPad.overlay  Kconfig.defconfig  Kconfig.shield  gigapad.keymap  module.yml
zephyr/: module.yml
